--- a/css/styles.css
+++ b/css/styles.css
@@ -2,25 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Bebas Neue", sans-serif;
+    font-family: sans-serif;
 }
-
-.bebas-neue-regular {
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
-/* <uniquifier>: Use a unique and descriptive class name
-<weight>: Use a value from 100 to 900
-*/
-
-.montserrat-uniquifier> {
-font-family: "Montserrat", sans-serif;
-font-optical-sizing: auto;
-font-weight: 40;
-font-style: normal;
-}
-
-body {
-    margin-top: 70px;
+a{
+    text-decoration: none;
 }
