--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: sans-serif;
 }
+
 nav{
     display: flex;
     justify-content: center;
@@ -12,4 +13,30 @@ nav{
 }
 a{
     text-decoration: none;
+    color: black;
+    font-size: 20px;
+}
+.perfil{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.foto{
+    border-radius: 600px;
+    padding: 20px;
+    padding-left: 30px;
+    height: 400px;
+}
+.ptexto{
+    padding: 40px;
+    font-size: 20px;
+}
+section{
+    border: 1px solid red;
+width: 100%;
+}
+h2{
+    text-align: center;
+    padding: 20px;
 }
