--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-    
+    scrollbar-color: #ca9d66  #030106;
+    scrollbar-width:auto;
 }
 body{
-    background: rgb(202,157,102);
-    background: linear-gradient(0deg, rgba(202,157,102,1) 0%, rgba(3,1,6,1) 79%);
+    background:#030106;
     color: white;
 }
 
